Demo dummy data, plus differentiated styling on video overlay to avoid it going off screen to the right.

--- a/meteor/client/styles/runningOrderView.scss
+++ b/meteor/client/styles/runningOrderView.scss
@@ -954,6 +954,7 @@ $segment-layer-separator-color: transparentize(#000, 0.5);
 		border: 1px solid #1f1f1f;
 		border-radius: 0px;
 		box-shadow: 0 0 18px 1px rgb(0, 0, 0);
+		transform: translate(-100%, -100%);
 
 		> video {
 			display: block;
